fix: update link hover styles for better visibility

--- a/_sass/abstracts/_placeholders.scss
+++ b/_sass/abstracts/_placeholders.scss
@@ -42,8 +42,8 @@
 }
 
 %link-hover {
-  color: #d2603a !important;
-  border-bottom: 1px solid #d2603a;
+  color: #FFF !important;
+  border-bottom: 1px solid #007bff;
   text-decoration: none;
 }
 
